--- a/TPMetodosAgiles/pom.xml
+++ b/TPMetodosAgiles/pom.xml
@@ -45,6 +45,16 @@
             <artifactId>JasperReports</artifactId>
             <version>4.7.1</version>
         </dependency>
+        <dependency>
+            <groupId>unknown.binary</groupId>
+            <artifactId>derbyclient</artifactId>
+            <version>SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>unknown.binary</groupId>
+            <artifactId>derby</artifactId>
+            <version>SNAPSHOT</version>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
