--- a/TPMetodosAgiles/pom.xml
+++ b/TPMetodosAgiles/pom.xml
@@ -55,6 +55,11 @@
             <artifactId>derby</artifactId>
             <version>SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>net.sf.jasperreports</groupId>
+            <artifactId>jasperreports</artifactId>
+            <version>4.7.1</version>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
